# millet

./: .gitignore  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  license.md  readme.md  rustfmt.toml  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
crates/analysis/: Cargo.toml
crates/analysis/src/: diagnostic.rs  diagnostics.rs  error.rs  input.rs  lib.rs  matcher.rs  primitives.rs  sml.rs  source_files.rs  std_basis.rs
crates/analysis/src/input/: group_path.rs  lower_cm.rs  lower_mlb.rs  root.rs  root_group.rs  topo.rs  util.rs
crates/analysis/src/input/root/: group_path.rs
crates/analysis/src/sml/: array-slice.sml  array.sml  bin-io.sml  bit-flags.sml  bool.sml  command-line.sml  date.sml  fn.sml  generic-sock.sml  ieee-float.sml  imperative-io-fn.sml  imperative-io.sml  integer.sml  list-pair.sml  math.sml  mod.rs  mono-array-slice.sml  mono-array.sml  mono-array2.sml  mono-vector-slice.sml  mono-vector.sml  net-host-db.sml  option.sml  os-file-sys.sml  os-io.sml  os-path.sml  os-process.sml  os.sml  pack-word.sml  posix-file-sys.sml  posix-io.sml  posix-proc-env.sml  posix-process.sml  posix-sys-db.sml  posix-tty.sml  posix.sml  real.sml  serv-db.sml  socket.sml  stream-io-fn.sml  (+11 more)
crates/analysis/src/sml/sml_nj/: ANSITerm.sml  ArrayQSort.sml  ArrayQSortFn.sml  Atom.sml  Base64.sml  BinaryMapFn.sml  BinarySetFn.sml  BitArray.sml  ControlUtil.sml  Controls.sml  DynamicArray.sml  Format.sml  FormatComb.sml  GraphSCCFn.sml  HASH_KEY.sml  Hash2TableFn.sml  HashConsMap.sml  HashConsSet.sml  HashTable.sml  HashTableFn.sml  INTERVAL_DOMAIN.sml  JSONParser.sml  JSONPrinter.sml  JSONStreamPrinter.sml  KeywordFn.sml  LibBase.sml  ListFormat.sml  ListMergeSort.sml  ListSetFn.sml  ORD_KEY.sml  ORD_MAP.sml  ORD_SET.sml  ParserComb.sml  Queue.sml  REGEXP_ENGINE.sml  REGEXP_PARSER.sml  Rand.sml  Scan.sml  SplayMapFn.sml  SplaySetFn.sml  (+11 more)
crates/analysis/src/sml/std_basis/: array-slice.sml  char.sml  command-line.sml  imperative-io.sml  int-inf.sml  integer.sml  mod.rs  os-io.sml  pack-word.sml  posix-io.sml  posix-process.sml  posix-signal.sml  posix-tty.sml  prim-io-fn.sml  prim-io.sml  prot-db.sml  random.sml  socket.sml  timer.sml  unix-sock.sml  windows.sml  word.sml
crates/analysis/src/sml/std_basis_extra/: fn.sml  mod.rs
crates/analysis/src/std_basis/: array.sml  array2.sml  bit-flags.sml  bool.sml  byte.sml  char.sml  general.sml  generic-sock.sml  inet-sock.sml  int-inf.sml  integer.sml  io.sml  list-pair.sml  list.sml  math.sml  mod.rs  mono-array2.sml  mono-vector-slice.sml  mono-vector.sml  net-host-db.sml  option.sml  os-file-sys.sml  os-io.sml  os-path.sml  os-process.sml  pack-float.sml  posix-error.sml  posix-file-sys.sml  posix-io.sml  posix-process.sml  posix-signal.sml  posix.sml  prim-io.sml  prot-db.sml  real.sml  stream-io.sml  string-cvt.sml  string.sml  substring.sml  text-io.sml  (+6 more)
crates/chain-map/: Cargo.toml
crates/chain-map/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  diagnostic.rs  help.txt  main.rs  reporter.rs  source.rs
crates/cm-syntax/: Cargo.toml
crates/cm-syntax/src/: lex.rs  lib.rs  lower.rs  parse.rs  tests.rs  types.rs
crates/config/: Cargo.toml
crates/config/src/: file.rs  init.rs  lang.rs  lib.rs  tool.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs  lower_cm.rs  lower_mlb.rs  root.rs  topo.rs  types.rs  util.rs
crates/lang-srv/: Cargo.toml
crates/lang-srv/src/: capabilities.rs  comm.rs  convert.rs  cx.rs  diagnostics.rs  headers.rs  helpers.rs  init.rs  lib.rs  main.rs  main_loop.rs  notification.rs  request.rs  response.rs  sp_state.rs  state.rs
crates/lang-srv/src/headers/: tests.rs
crates/lang-srv/src/state/: helpers.rs
crates/millet-cli/: Cargo.toml
crates/millet-cli/src/: main.rs
crates/millet-ls/: Cargo.toml
crates/millet-ls/src/: capabilities.rs  helpers.rs  main.rs  state.rs
crates/mlb-hir/: Cargo.toml
crates/mlb-hir/src/: lib.rs
crates/mlb-statics/: Cargo.toml
crates/mlb-statics/src/: doc_comment.rs  lib.rs  sml.rs  std_basis.rs
crates/mlb-syntax/: Cargo.toml
crates/mlb-syntax/src/: lex.rs  lib.rs  parse.rs  tests.rs  types.rs
crates/old-lang-srv/: Cargo.toml
crates/old-lang-srv/src/: comm.rs  headers.rs  io.rs  state.rs
crates/old-parse/: Cargo.toml
crates/old-parse/src/: lib.rs
crates/old-statics/: Cargo.toml
crates/old-statics/src/: ck.rs  lib.rs  std_lib.rs  ty_rzn.rs  types.rs
crates/old-statics/src/ck/: dec.rs  enrich.rs  exhaustive.rs  pat.rs  sig_match.rs  top_dec.rs  ty.rs  util.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs
crates/parser/src/grammar/: dec.rs  expr.rs  ty.rs
crates/parser/src/parser/: marker.rs  parse_error.rs
crates/sml-dynamics/: Cargo.toml
crates/sml-dynamics-tests/: Cargo.toml
crates/sml-dynamics-tests/src/: lib.rs
crates/sml-dynamics/src/: display.rs  dynamics.rs  lib.rs  pat_match.rs  step.rs  types.rs
crates/sml-file-syntax/: Cargo.toml
crates/sml-file-syntax/src/: lib.rs
crates/sml-fixity/: Cargo.toml
crates/sml-fixity/src/: lib.rs
crates/sml-hir/: Cargo.toml
crates/sml-hir-lower/: Cargo.toml
crates/sml-hir-lower/src/: common.rs  dec.rs  exp.rs  lib.rs  pat.rs  root.rs  ty.rs  util.rs
crates/sml-hir/src/: lib.rs
crates/sml-lex/: Cargo.toml
crates/sml-lex/src/: lib.rs
crates/sml-lower/: Cargo.toml
crates/sml-lower/src/: common.rs  dec.rs  exp.rs  lib.rs  pat.rs  root.rs  top_dec.rs  ty.rs  util.rs
crates/sml-mir/: Cargo.toml
crates/sml-mir-lower/: Cargo.toml
crates/sml-mir-lower/src/: lib.rs
crates/sml-mir/src/: lib.rs
crates/sml-naive-fmt/: Cargo.toml
crates/sml-naive-fmt/src/: lib.rs
crates/sml-parse/: Cargo.toml
crates/sml-parse/src/: dec.rs  exp.rs  lib.rs  parser.rs  pat.rs  root.rs  top_dec.rs  ty.rs  util.rs
crates/sml-statics-types/: Cargo.toml
crates/sml-statics-types/src/: data.rs  def.rs  disallow.rs  display.rs  env.rs  equality.rs  fmt_util.rs  generalize.rs  info.rs  item.rs  lib.rs  mode.rs  notes.rs  overload.rs  sym.rs  ty.rs  unify.rs  util.rs
doc/: architecture.md  (+9 more)
(+1062 files in other folders)
