[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.12.9"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# third-party
anyhow = "1.0.75"
better-panic = "0.3.0"
codespan-reporting = "0.11.1"
crossbeam-channel = "0.5.8"
drop_bomb = "0.1.5"
env_logger = "0.10.0"
flate2 = "1.0.27"
la-arena = "0.3.1"
log = "0.4.20"
lsp-server = "0.7.3"
lsp-types = { version = "0.94.1", features = ["proposed"] }
num-bigint = "0.4.3"
num-traits = "0.2.16"
once_cell = "1.18.0"
pico-args = "0.5.0"
pretty_assertions = "1.4.0"
pulldown-cmark = "0.9.3"
rowan = "0.15.11"
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.6"
# language-util
code-h2-md-map.git = "https://github.com/azdavis/language-util.git"
diagnostic.git = "https://github.com/azdavis/language-util.git"
elapsed.git = "https://github.com/azdavis/language-util.git"
event-parse.git = "https://github.com/azdavis/language-util.git"
fast-hash.git = "https://github.com/azdavis/language-util.git"
fmt-util.git = "https://github.com/azdavis/language-util.git"
idx.git = "https://github.com/azdavis/language-util.git"
paths.git = "https://github.com/azdavis/language-util.git"
pattern-match.git = "https://github.com/azdavis/language-util.git"
str-util.git = "https://github.com/azdavis/language-util.git"
str-util.features = ["serde"]
syntax-gen.git = "https://github.com/azdavis/language-util.git"
text-pos.git = "https://github.com/azdavis/language-util.git"
text-size-util.git = "https://github.com/azdavis/language-util.git"
token.git = "https://github.com/azdavis/language-util.git"
topo-sort.git = "https://github.com/azdavis/language-util.git"
uniq.git = "https://github.com/azdavis/language-util.git"
# sml-libs
sml-libs.git = "https://github.com/azdavis/sml-libs.git"

[profile.release]
codegen-units = 1
lto = "fat"
# for backtraces
debug = 1
strip = "none"
