[package]
name = "analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
config = { path = "../config" }
diagnostic = { git = "https://github.com/azdavis/language-util.git" }
elapsed = { git = "https://github.com/azdavis/language-util.git" }
fmt-util = { git = "https://github.com/azdavis/language-util.git" }
input = { path = "../input" }
mlb-statics = { path = "../mlb-statics" }
paths = { git = "https://github.com/azdavis/language-util.git" }
sml-file-syntax = { path = "../sml-file-syntax" }
sml-fixity = { path = "../sml-fixity" }
sml-naive-fmt = { path = "../sml-naive-fmt" }
sml-hir = { path = "../sml-hir" }
sml-namespace = { path = "../sml-namespace" }
sml-statics = { path = "../sml-statics" }
sml-statics-types = { path = "../sml-statics-types" }
sml-syntax = { path = "../sml-syntax" }
str-util = { git = "https://github.com/azdavis/language-util.git" }
text-pos = { git = "https://github.com/azdavis/language-util.git" }
text-size-util = { git = "https://github.com/azdavis/language-util.git" }

[features]
sync = ["mlb-statics/sync", "sml-statics/sync", "sml-statics-types/sync"]
