[package]
name = "analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
config = { path = "../config" }
diagnostic.workspace = true
elapsed.workspace = true
fmt-util.workspace = true
input = { path = "../input" }
mlb-statics = { path = "../mlb-statics" }
paths.workspace = true
sml-file-syntax = { path = "../sml-file-syntax" }
sml-fixity = { path = "../sml-fixity" }
sml-naive-fmt = { path = "../sml-naive-fmt" }
sml-hir = { path = "../sml-hir" }
sml-namespace = { path = "../sml-namespace" }
sml-statics = { path = "../sml-statics" }
sml-statics-types = { path = "../sml-statics-types" }
sml-symbol-kind = { path = "../sml-symbol-kind" }
sml-syntax = { path = "../sml-syntax" }
str-util.workspace = true
text-pos.workspace = true
text-size-util.workspace = true

[features]
sync = [
  "mlb-statics/sync",
  "sml-statics/sync",
  "sml-statics-types/sync",
  "sml-symbol-kind/sync",
]
