[package]
name = "analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
diagnostic.workspace = true
elapsed.workspace = true
fast-hash.workspace = true
fmt-util.workspace = true
paths.workspace = true
str-util.workspace = true
text-pos.workspace = true
text-size-util.workspace = true

config.path = "../config"
input.path = "../input"
mlb-statics.path = "../mlb-statics"
sml-file-syntax.path = "../sml-file-syntax"
sml-fixity.path = "../sml-fixity"
sml-naive-fmt.path = "../sml-naive-fmt"
sml-hir.path = "../sml-hir"
sml-namespace.path = "../sml-namespace"
sml-statics.path = "../sml-statics"
sml-statics-types.path = "../sml-statics-types"
sml-symbol-kind.path = "../sml-symbol-kind"
sml-syntax.path = "../sml-syntax"

[features]
sync = [
  "mlb-statics/sync",
  "sml-statics/sync",
  "sml-statics-types/sync",
  "sml-symbol-kind/sync",
]
