[package]
name = "chain-map"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
str-util = { git = "https://github.com/azdavis/language-util.git" }
