[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
analysis = { path = "../analysis" }
config = { path = "../config" }
diagnostic-util = { path = "../diagnostic-util" }
mlb-statics = { path = "../mlb-statics" }
paths = { path = "../paths" }
pico-args = "0.5"
