[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
serde = { version = "1", features = ["derive"] }
str-util = { git = "https://github.com/azdavis/language-util.git" }
sml-path = { path = "../sml-path" }
