[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
fast-hash.workspace = true
serde = { version = "1", features = ["derive"] }
str-util.workspace = true
sml-path = { path = "../sml-path" }
