[package]
name = "input"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
cm-syntax = { path = "../cm-syntax" }
config = { path = "../config" }
diagnostic = { git = "https://github.com/azdavis/language-util.git" }
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
mlb-hir = { path = "../mlb-hir" }
mlb-syntax = { path = "../mlb-syntax" }
paths = { git = "https://github.com/azdavis/language-util.git" }
slash-var-path = { path = "../slash-var-path" }
sml-file-syntax = { path = "../sml-file-syntax" }
sml-fixity = { path = "../sml-fixity" }
sml-namespace = { path = "../sml-namespace" }
sml-syntax = { path = "../sml-syntax" }
sml-path = { path = "../sml-path" }
str-util = { git = "https://github.com/azdavis/language-util.git" }
text-pos = { git = "https://github.com/azdavis/language-util.git" }
text-size-util = { git = "https://github.com/azdavis/language-util.git" }
toml = "0.7"
topo-sort = { git = "https://github.com/azdavis/language-util.git" }
