[package]
name = "input"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
cov-mark = { path = "../cov-mark" }
cm-syntax = { path = "../cm-syntax" }
config = { path = "../config" }
diagnostic.workspace = true
fast-hash.workspace = true
mlb-hir = { path = "../mlb-hir" }
mlb-syntax = { path = "../mlb-syntax" }
paths.workspace = true
slash-var-path = { path = "../slash-var-path" }
sml-file-syntax = { path = "../sml-file-syntax" }
sml-fixity = { path = "../sml-fixity" }
sml-namespace = { path = "../sml-namespace" }
sml-syntax = { path = "../sml-syntax" }
sml-path = { path = "../sml-path" }
str-util.workspace = true
text-pos.workspace = true
text-size-util.workspace = true
toml = "0.7"
topo-sort.workspace = true
