[package]
name = "input"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
diagnostic.workspace = true
fast-hash.workspace = true
paths.workspace = true
str-util.workspace = true
text-pos.workspace = true
text-size-util.workspace = true
toml.workspace = true
topo-sort.workspace = true

cm-syntax.path = "../cm-syntax"
config.path = "../config"
cov-mark.path = "../cov-mark"
mlb-hir.path = "../mlb-hir"
mlb-syntax.path = "../mlb-syntax"
slash-var-path.path = "../slash-var-path"
sml-file-syntax.path = "../sml-file-syntax"
sml-file.path = "../sml-file"
sml-fixity.path = "../sml-fixity"
sml-namespace.path = "../sml-namespace"
sml-path.path = "../sml-path"
sml-syntax.path = "../sml-syntax"
