[package]
name = "lang-srv"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
analysis = { path = "../analysis" }
anyhow = "1"
config = { path = "../config" }
crossbeam-channel = "0.5"
diagnostic-util = { path = "../diagnostic-util" }
elapsed = { path = "../elapsed" }
env_logger = { version = "0.9" }
fast-hash = { path = "../fast-hash" }
log = "0.4"
lsp-server = "0.6"
lsp-types = "0.93"
mlb-statics = { path = "../mlb-statics" }
paths = { path = "../paths" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-pos = { git = "https://github.com/azdavis/language-util.git" }
