[package]
name = "lang-srv"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
analysis.path = "../analysis"
anyhow = "1"
config.path = "../config"
crossbeam-channel = "0.5"
diagnostic.workspace = true
elapsed.workspace = true
fast-hash.workspace = true
input.path = "../input"
log = "0.4"
lsp-server = "0.7"
lsp-types = { version = "0.93", features = ["proposed"] }
paths.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sml-namespace.path = "../sml-namespace"
text-pos.workspace = true
