[package]
name = "millet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "millet-cli"
test = false

[dependencies]
analysis = { path = "../analysis" }
codespan-reporting = "0.11"
config = { path = "../config" }
diagnostic = { git = "https://github.com/azdavis/language-util.git" }
env_logger = "0.10"
input = { path = "../input" }
panic-hook = { path = "../panic-hook" }
paths = { git = "https://github.com/azdavis/language-util.git" }
pico-args = "0.5"
sml-naive-fmt = { path = "../sml-naive-fmt" }
text-pos = { git = "https://github.com/azdavis/language-util.git" }
text-size-util = { git = "https://github.com/azdavis/language-util.git" }
