[package]
name = "millet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "millet-cli"
test = false

[dependencies]
analysis = { path = "../analysis" }
codespan-reporting = "0.11"
config = { path = "../config" }
diagnostic.workspace = true
env_logger = "0.10"
input = { path = "../input" }
panic-hook = { path = "../panic-hook" }
paths.workspace = true
pico-args = "0.5"
sml-naive-fmt = { path = "../sml-naive-fmt" }
text-pos.workspace = true
text-size-util.workspace = true
