[package]
name = "millet-ls"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "millet-ls"
test = false

[dependencies]
anyhow = "1"
env_logger = "0.10"
lang-srv = { path = "../lang-srv" }
log = "0.4"
panic-hook = { path = "../panic-hook" }
