[package]
name = "mlb-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
fast-hash.workspace = true
paths.workspace = true
str-util.workspace = true
text-size-util.workspace = true

sml-namespace.path = "../sml-namespace"
