[package]
name = "mlb-statics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
config = { path = "../config" }
diagnostic = { git = "https://github.com/azdavis/language-util.git" }
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
mlb-hir = { path = "../mlb-hir" }
once_cell = "1"
paths = { git = "https://github.com/azdavis/language-util.git" }
sml-comment = { path = "../sml-comment" }
sml-file-syntax = { path = "../sml-file-syntax" }
sml-fixity = { path = "../sml-fixity" }
sml-hir = { path = "../sml-hir" }
sml-libs = { git = "https://github.com/azdavis/sml-libs.git" }
sml-lower = { path = "../sml-lower" }
sml-namespace = { path = "../sml-namespace" }
sml-statics = { path = "../sml-statics" }
sml-statics-types = { path = "../sml-statics-types" }
sml-syntax = { path = "../sml-syntax" }
str-util = { git = "https://github.com/azdavis/language-util.git" }
text-pos = { git = "https://github.com/azdavis/language-util.git" }
text-size-util = { git = "https://github.com/azdavis/language-util.git" }
