[package]
name = "mlb-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lex-util = { path = "../lex-util" }
paths = { git = "https://github.com/azdavis/language-util.git" }
slash-var-path = { path = "../slash-var-path" }
sml-namespace = { path = "../sml-namespace" }
str-util = { git = "https://github.com/azdavis/language-util.git" }
text-size-util = { git = "https://github.com/azdavis/language-util.git" }
