[package]
name = "mlb-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lex-util = { path = "../lex-util" }
paths.workspace = true
slash-var-path = { path = "../slash-var-path" }
sml-namespace = { path = "../sml-namespace" }
str-util.workspace = true
text-size-util.workspace = true
