[package]
name = "old-lang-srv"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
crossbeam-channel = "0.5"
lsp-types = "0.93"
serde = "1"
serde_json = "1"
old-intern = { path = "../old-intern" }
old-lex = { path = "../old-lex" }
old-loc = { path = "../old-loc" }
old-parse = { path = "../old-parse" }
old-statics = { path = "../old-statics" }
