[package]
name = "old-parse"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
test = false
doctest = false

[dependencies]
fast-hash = { path = "../fast-hash" }
old-ast = { path = "../old-ast" }
old-intern = { path = "../old-intern" }
old-lex = { path = "../old-lex" }
old-loc = { path = "../old-loc" }
old-token = { path = "../old-token" }
