[package]
name = "old-statics"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
rustc-hash = "1"
old-ast = { path = "../old-ast" }
old-intern = { path = "../old-intern" }
old-loc = { path = "../old-loc" }
old-token = { path = "../old-token" }
util = { path = "../util" }
