[package]
name = "parser"
version = "0.1.0"
authors = ["kopecs <cppierce@andrew.cmu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
rowan = "0.10.0"
text-size = "1.0.0"

[dependencies.lexer]
path = "../lexer"

[dependencies.syntax]
path = "../syntax"

[dev-dependencies]
expect-test = "1.0.1"
drop_bomb = "0.1.5"
