[package]
name = "sml-dynamics-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[dev-dependencies]
sml-file-syntax = { path = "../sml-file-syntax" }
sml-statics = { path = "../sml-statics" }
sml-statics-types = { path = "../sml-statics-types" }
sml-fixity = { path = "../sml-fixity" }
sml-hir = { path = "../sml-hir" }
sml-path = { path = "../sml-path" }
config = { path = "../config" }
sml-dynamics = { path = "../sml-dynamics" }
str-util = { git = "https://github.com/azdavis/language-util.git" }
