[package]
name = "sml-dynamics-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dev-dependencies]
pretty_assertions.workspace = true
str-util.workspace = true

config.path = "../config"
sml-dynamics.path = "../sml-dynamics"
sml-file-syntax.path = "../sml-file-syntax"
sml-file.path = "../sml-file"
sml-fixity.path = "../sml-fixity"
sml-hir.path = "../sml-hir"
sml-path.path = "../sml-path"
sml-statics-types.path = "../sml-statics-types"
sml-statics.path = "../sml-statics"
