[package]
name = "sml-dynamics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
sml-hir = { path = "../sml-hir" }
sml-statics-types = { path = "../sml-statics-types" }
str-util = { git = "https://github.com/azdavis/language-util.git" }
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
fmt-util = { git = "https://github.com/azdavis/language-util.git" }
