[package]
name = "sml-dynamics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
sml-hir.path = "../sml-hir"
sml-statics-types.path = "../sml-statics-types"
str-util.workspace = true
fast-hash.workspace = true
fmt-util.workspace = true
