[package]
name = "sml-dynamics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
fast-hash.workspace = true
fmt-util.workspace = true
str-util.workspace = true

sml-hir.path = "../sml-hir"
sml-statics-types.path = "../sml-statics-types"
