[package]
name = "sml-file-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
config = { path = "../config" }
elapsed = { git = "https://github.com/azdavis/language-util.git" }
sml-fixity = { path = "../sml-fixity" }
sml-lex = { path = "../sml-lex" }
sml-lower = { path = "../sml-lower" }
sml-parse = { path = "../sml-parse" }
sml-ty-var-scope = { path = "../sml-ty-var-scope" }
text-pos = { git = "https://github.com/azdavis/language-util.git" }
