[package]
name = "sml-file-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
elapsed.workspace = true
text-pos.workspace = true

config.path = "../config"
sml-file.path = "../sml-file"
sml-fixity.path = "../sml-fixity"
sml-hir-lower.path = "../sml-hir-lower"
sml-lex.path = "../sml-lex"
sml-parse.path = "../sml-parse"
sml-ty-var-scope.path = "../sml-ty-var-scope"
