[package]
name = "sml-fixity"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
doctest = false
test = false

[dependencies]
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
once_cell = "1"
str-util = { git = "https://github.com/azdavis/language-util.git" }
