[package]
name = "sml-fixity"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false
test = false

[dependencies]
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
once_cell = "1"
str-util = { git = "https://github.com/azdavis/language-util.git" }
