[package]
name = "sml-hir-lower"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false
test = false

[dependencies]
config.path = "../config"
diagnostic.workspace = true
fast-hash.workspace = true
lex-util.path = "../lex-util"
cov-mark.path = "../cov-mark"
sml-hir.path = "../sml-hir"
sml-path.path = "../sml-path"
sml-syntax.path = "../sml-syntax"
str-util.workspace = true
