[package]
name = "sml-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false
test = false

[dependencies]
la-arena = "0.3"
num-bigint = "0.4"
str-util = { git = "https://github.com/azdavis/language-util.git" }
sml-path = { path = "../sml-path" }
