[package]
name = "sml-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false
test = false

[dependencies]
la-arena = "0.3"
str-util.workspace = true
sml-path.path = "../sml-path"
sml-lab.path = "../sml-lab"
sml-scon.path = "../sml-scon"
