[package]
name = "sml-lex"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
diagnostic.workspace = true
lex-util = { path = "../lex-util" }
cov-mark = { path = "../cov-mark" }
sml-syntax = { path = "../sml-syntax" }
