[package]
name = "sml-lower"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
doctest = false
test = false

[dependencies]
diagnostic-util = { path = "../diagnostic-util" }
fast-hash = { path = "../fast-hash" }
num-traits = "0.2"
sml-hir = { path = "../sml-hir" }
sml-syntax = { path = "../sml-syntax" }
str-util = { path = "../str-util" }
