[package]
name = "sml-mir"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
sml-lab = { path = "../sml-lab" }
sml-scon = { path = "../sml-scon" }
uniq = { git = "https://github.com/azdavis/language-util.git" }
