[package]
name = "sml-naive-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
sml-comment = { path = "../sml-comment" }
sml-syntax = { path = "../sml-syntax" }
