[package]
name = "sml-parse"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
doctest = false
test = false

[dependencies]
diagnostic-util = { git = "https://github.com/azdavis/language-util.git" }
event-parse = { git = "https://github.com/azdavis/language-util.git" }
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
sml-fixity = { path = "../sml-fixity" }
sml-syntax = { path = "../sml-syntax" }
str-util = { git = "https://github.com/azdavis/language-util.git" }
