[package]
name = "sml-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false
test = false

[dependencies]
diagnostic = { git = "https://github.com/azdavis/language-util.git" }
event-parse = { git = "https://github.com/azdavis/language-util.git" }
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
sml-fixity = { path = "../sml-fixity" }
sml-syntax = { path = "../sml-syntax" }
str-util = { git = "https://github.com/azdavis/language-util.git" }
