[package]
name = "sml-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false
test = false

[dependencies]
diagnostic.workspace = true
event-parse.workspace = true
fast-hash.workspace = true
str-util.workspace = true

sml-fixity.path = "../sml-fixity"
sml-syntax.path = "../sml-syntax"
