[package]
name = "sml-statics-types"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
code-h2-md-map = { git = "https://github.com/azdavis/language-util.git" }
drop_bomb = "0.1"
fast-hash = { git = "https://github.com/azdavis/language-util.git" }
fmt-util = { git = "https://github.com/azdavis/language-util.git" }
idx = { git = "https://github.com/azdavis/language-util.git" }
once_cell = "1"
paths = { git = "https://github.com/azdavis/language-util.git" }
chain-map = { path = "../chain-map" }
sml-hir = { path = "../sml-hir" }
sml-path = { path = "../sml-path" }
str-util = { git = "https://github.com/azdavis/language-util.git" }

[features]
sync = ["chain-map/sync"]
